Fix some layout issues and data bugs

--- a/src/App.css
+++ b/src/App.css
@@ -3,21 +3,28 @@ body {
   color: white;
 }
 
-.App-header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  padding: 1rem;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 .bandplan {
   flex: 1;
+}
+
+.frequency-block {
+  display: block;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.1);
+  overflow: hidden;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+span.frequency {
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-size: 0.9rem;
+}
+
+span.comment {
+  font-size: 0.8rem;
+  padding: 0.5rem, 0;
 }
 
 @keyframes App-logo-spin {
